<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/changePassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/signUpLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cambio de contraseña"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="2500" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@mipmap/smart_parking_logo" />

    <TextView
        android:id="@+id/TextViewCurrentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passwordNotMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/passwords_not_match"
        android:textColor="@color/smartparking_red"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/TextView_Pwd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TextView_Pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_password2"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:layout_marginTop="25dp"
        android:shadowColor="@color/cardview_shadow_end_color"
        android:background="@drawable/btn_rectangle"
        android:text="@string/sendButton" />

</LinearLayout>