<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:textStyle="bold|italic|normal"
            android:layout_gravity="center"
            android:text="@string/welcome" />

        <ImageView
            android:id="@+id/initLogo"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="274dp"
            android:src="@mipmap/smart_parking_logo_round"
            tools:srcCompat="@mipmap/smart_parking_logo_round" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/primary_text"
            android:layout_marginBottom="8dp"
            android:text="@string/loginText" />

        <EditText
            android:id="@+id/usernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Username"
            android:textColorHint="@color/divider"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:textColorHint="@color/divider"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:layout_marginTop="25dp"
            android:shadowColor="@color/cardview_shadow_end_color"
            android:background="@drawable/btn_rectangle"
            android:text="@string/loginButton" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>