<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registryProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/signUpLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registro"
            android:textStyle="bold"
            android:textSize="24dp"
            android:textColor="@color/colorPrimary"
            android:textFontWeight="2500" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_gravity="center"
            android:src="@mipmap/smart_parking_logo" />

        <TextView
            android:id="@+id/credencialesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/primary_text"
            android:text="Username"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/usernameSignUp"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="username"
                    android:textColorHint="@color/divider"
                    android:inputType="textPersonName"/>

                <TextView
                    android:id="@+id/not_spaces_in_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/usernameSignUp"
                    android:ems="10"
                    android:textColor="@color/smartparking_red"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/without_spaces"
                    android:inputType="text"/>

                <ImageButton
                    android:id="@+id/setRandomUser"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/usernameSignUp"
                    android:background="@drawable/btn_rectangle"
                    android:contentDescription="@string/randomic_user"
                    android:src="@drawable/changepass_menu" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordSignUp"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="password"
                    android:textColorHint="@color/divider"
                    android:inputType="textPassword"/>

                <ImageButton
                    android:id="@+id/passModeButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_rectangle"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/passwordSignUp"
                    android:contentDescription="@string/show_password"
                    android:src="@drawable/showtext" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ageTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/primary_text"
                    android:text="Fecha de nacimiento"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/birthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_below="@+id/ageTextView"
                    android:ems="10"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:hint="yyyy-MM-dd"
                    android:inputType="date" />

                <ImageButton
                    android:id="@+id/datePickerButton"
                    android:layout_width="48dp"
                    android:background="@drawable/btn_rectangle"
                    android:layout_height="48dp"
                    android:contentDescription="@string/date_picker"
                    android:layout_below="@+id/ageTextView"
                    android:src="@drawable/datepicker"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/birthDate"
                    />

        </RelativeLayout>

        <TextView
            android:id="@+id/sexTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/primary_text"
            android:text="Sexo"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/sexRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/maleRadButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:text="Hombre"/>

            <RadioButton
                android:id="@+id/femaleRadButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:text="Mujer" />
        </RadioGroup>

        <Button
            android:id="@+id/signUpButton"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:background="@drawable/btn_rectangle"
            android:shadowColor="@color/cardview_shadow_end_color"
            android:text="@string/signUpButton" />

</LinearLayout>